outputs/tsp_aco-aco/2026-03-07_19-37-45/problem_iter10_response7.txt_stdout.txt
Traceback (most recent call last):
  File "D:\reevo/problems/tsp_aco/eval.py", line 20, in <module>
    import gpt
  File "D:\reevo\problems\tsp_aco\gpt.py", line 296
    lp_scores[i, j] = lp_scores[j, i] *= np.exp(-reduced_cost / (stats['mean_dist'] + 1e-10))
                                      ^^
SyntaxError: invalid syntax
